syntax = "proto3";

package chatroom;

import "google/protobuf/timestamp.proto";

option go_package = "proto/chatroom";

message Chatroom {
    int32 id = 1;
    string room_name = 2;
    bool is_group = 3;
    google.protobuf.Timestamp created_at = 4;     
    google.protobuf.Timestamp updated_at = 5;   
}

message CreateChatroomRequest {
    string room_name = 1;
    bool is_group = 2;
}

message CreateChatroomResponse {
    Chatroom chatroom = 1;
}

message FindChatroomByIDRequest {
    int32 id = 1;
}

message FindChatroomByIDResponse {
    Chatroom chatroom = 1;
}

message PatchChatroomRequest {
    int32 id = 1;
    string room_name = 2;
    bool is_group = 3;
}

message PatchChatroomResponse {
    Chatroom chatroom = 1;
}

message DeleteChatroomRequest {
    int32 id = 1;
}

message DeleteChatroomResponse {
    string message = 1;
}

service ChatroomService {
    rpc CreateChatroom(CreateChatroomRequest) returns (CreateChatroomResponse);
    rpc FindChatroomByID(FindChatroomByIDRequest) returns (FindChatroomByIDResponse);
    rpc PatchChatroom(PatchChatroomRequest) returns (PatchChatroomResponse);
    rpc DeleteChatroom(DeleteChatroomRequest) returns (DeleteChatroomResponse);
}